# url-shortener

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  wait-for-it.sh
app/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py  utils.py  zookeeper.py
app/models/: __init__.py  auth.py  response.py  url.py  user.py
app/routers/: auth.py  urls.py  users.py
app/services/: hash_shortener.py
app/utils/: email.py
frontend/: .prettierrc  Dockerfile  eslint.config.mjs  package-lock.json  package.json
frontend/.storybook/: main.js  preview.js
frontend/src/: middleware.js
frontend/src/app/: layout.js  page.js
frontend/src/app/account/: page.js
frontend/src/app/auth/login/: page.js
frontend/src/app/auth/register/: page.js
frontend/src/app/dashboard/: page.js
frontend/src/components/: URLDetailsCard.js  UserActions.js  footer.js  header.js  index.js
frontend/src/components/Button/: Button.js  Button.stories.js
frontend/src/config/: environments.js
frontend/src/layouts/: mainLayout.js
frontend/src/lib/: apiClient.js  auth.js  axios.js  index.js
frontend/src/providers/: antdProvider.js  index.js  queryProvider.js
frontend/src/stores/: authStore.js
frontend/src/stories/: Button.stories.js  Header.stories.js  Page.stories.js
frontend/src/utils/: axios.js
frontend/utils/: axios.js
