[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.7",
    "pymongo>=4.14.1",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.35.0",
]
