[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib>=4.0.2",
    "beanie>=1.30.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.3.0",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pymongo>=4.14.1",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.35.0",
]
